tests/ui/async_fn.stderr
error: async function is not directly supported yet, but see https://cxx.rs/async.html for a working approach, and https://github.com/pcwalton/cxx-async for some helpers; eventually what you wrote will work but it isn't integrated into the cxx::bridge macro yet
 --> tests/ui/async_fn.rs:4:9
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         async fn f();
  |         ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)

error: async function is not directly supported yet, but see https://cxx.rs/async.html for a working approach, and https://github.com/pcwalton/cxx-async for some helpers; eventually what you wrote will work but it isn't integrated into the cxx::bridge macro yet
 --> tests/ui/async_fn.rs:8:9
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
8 |         async fn g();
  |         ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
